MappingProvider now returns a MemoryMappingTree instead of a Path